# EMILIA_project

./: README.md  package-lock.json
AI/: .gitignore  README.md  access_remote_cbt.py  cbt_bot_json_test.py  cbt_client.py  deep_research.md  langgraph.json  pyproject.toml  run_cbt_server.py  setup_pythonpath.sh  start_cbt_bot.sh  start_cbt_server.sh  test_cbt_bot.py  test_cbt_conversation.py  test_prompt_chatbot.py
AI/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
AI/data/: recommendations.md
AI/docs/: paper.tex
AI/src/agents/: cbt_intervention_agent.py  emergency_medical.py  general_medical.py  listener_agent.py  mental_health_specialist.py  therapist_agents.py  therapist_base.py
AI/src/analysis/: therapist_selector.py
AI/src/core/: cbt_bot.py  cbt_graph.py  config.py  content_manager.py  emilia_agent.py  llm.py
AI/src/data/: content_database.json  content_schema.json
AI/src/prompts/: agent_prompts.py  cbt_prompts.py
AI/src/schema/: cbt_state.py
AI/src/tools/: cbt_tools.py  medical_tools.py  mental_health_tools.py
AI/src/utils/: conversation_parser.py  state_utils.py
AI/test_conversations/: anxiety_scenario.json  bullying_scenario.json
Backend/: package-lock.json  package.json
Backend/prisma/: schema.prisma
Backend/src/: app.ts
Backend/src/controllers/: messagesController.ts
Backend/src/routes/: messagesRoutes.ts
Frontend/: package-lock.json  package.json
Frontend/pages/: Dashboard.css  Dashboard.jsx
Frontend/src/: App.jsx
(+7 files in other folders)
